--- a/src/components/_fonts.sass
+++ b/src/components/_fonts.sass
@@ -2,34 +2,34 @@
   font-family: Fregat
   font-weight: normal
   font-style: normal
-  src: url(build/fonts/Fregat_regular.otf)
+  src: url(fonts/Fregat_regular.otf)
 
 @font-face
   font-family: Fregat
   font-weight: bold
   font-style: normal
-  src: url(build/fonts/Fregat_bold.otf)
+  src: url(fonts/Fregat_bold.otf)
 
   @font-face
     font-family: Fregat
     font-weight: bold
     font-style: italic
-    src: url(build/fonts/Fregat_bold_italic.otf)
+    src: url(fonts/Fregat_bold_italic.otf)
 
   @font-face
     font-family: Fregat
     font-weight: normal
     font-style: italic
-    src: url(build/fonts/Fregat_italic.otf)
+    src: url(fonts/Fregat_italic.otf)
 
   @font-face
     font-family: PT Sans
     font-weight: normal
     font-style: normal
-    src: url(build/fonts/PtSans_regular.woff), url(build/fonts/PtSans_regular.ttf)
+    src: url(fonts/PtSans_regular.woff), url(fonts/PtSans_regular.ttf)
 
     @font-face
       font-family: PT Sans
       font-weight: bold
       font-style: normal
-      src: url(build/fonts/PtSans_bold.woff), url(build/fonts/PtSans_bold.ttf)
+      src: url(fonts/PtSans_bold.woff), url(fonts/PtSans_bold.ttf)
