--- a/src/components/_hero.sass
+++ b/src/components/_hero.sass
@@ -1,11 +1,11 @@
 .hero
   background-color: $bg-hero
   @media screen and (min-width: 576px)
-    background: url(build/pics/hero_lg.jpg) no-repeat 30%/cover $bg-hero
+    background: url(pics/hero_lg.jpg) no-repeat 30%/cover $bg-hero
   @media screen and (min-width: 992px)
-    background: url(build/pics/hero_lg.jpg) no-repeat 50%/cover $bg-hero
+    background: url(pics/hero_lg.jpg) no-repeat 50%/cover $bg-hero
   @media screen and (min-width: 1500px)
-    background: url(build/pics/hero_lg.jpg) no-repeat right/contain $bg-hero
+    background: url(pics/hero_lg.jpg) no-repeat right/contain $bg-hero
   &__heading
     margin-top: 50px
     +text($_24, $heading_hero)
