--- a/src/components/_proceed.sass
+++ b/src/components/_proceed.sass
@@ -24,7 +24,7 @@
     width: 90%
     height: 60px
     margin: 0px auto 50px
-    background: url(build/pics/icons/numeric-line.png) no-repeat center
+    background: url(pics/icons/numeric-line.png) no-repeat center
     background-size: contain
     @media screen and (min-width: 1200px)
       margin-bottom: 80px
