--- a/src/components/_reasons.sass
+++ b/src/components/_reasons.sass
@@ -1,5 +1,5 @@
 .reasons
-  background: url(build/pics/reasons-bg-lg.jpg) center/cover no-repeat #2f2923
+  background: url(pics/reasons-bg-lg.jpg) center/cover no-repeat #2f2923
   &__heading-primary
     margin-top: 50px
     margin-bottom: 30px
@@ -38,15 +38,15 @@
       width: 156px
       height: 165px
       &--work
-        background: url(build/pics/icons/icons-sprite.png) no-repeat -186px -85px
+        background: url(pics/icons/icons-sprite.png) no-repeat -186px -85px
       &--tv
-        background: url(build/pics/icons/icons-sprite.png) no-repeat -535px -85px
+        background: url(pics/icons/icons-sprite.png) no-repeat -535px -85px
       &--pc
-        background: url(build/pics/icons/icons-sprite.png) no-repeat -360px -85px
+        background: url(pics/icons/icons-sprite.png) no-repeat -360px -85px
       &--food
-        background: url(build/pics/icons/icons-sprite.png) no-repeat -710px -85px
+        background: url(pics/icons/icons-sprite.png) no-repeat -710px -85px
       &--car
-        background: url(build/pics/icons/icons-sprite.png) no-repeat -11px -85px
+        background: url(pics/icons/icons-sprite.png) no-repeat -11px -85px
     &__text
       margin-top: 25px
       text-align: center
