--- a/src/components/_callback.sass
+++ b/src/components/_callback.sass
@@ -22,6 +22,7 @@
       width: auto
     &__input
       width: 100%
+      height: 52px
       padding: 15px
       margin-bottom: 15px
       font-family: $optional
